commented out the body which was preventing the body of the page to be properly aligned

--- a/frontend/css/temp.css
+++ b/frontend/css/temp.css
@@ -2,10 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 
-body {
+/*body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f4f4f9;
     color: #333;
@@ -14,7 +16,7 @@ body {
     max-width: 1200px;
     margin: auto;
     padding: 20px;
-}
+} */
 
 /*background-image: url("main/images/pinkBackground.jpg");
     background-size: cover;
@@ -84,7 +86,6 @@ web page
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 30px;
 
 }
 
